--- a/string_entregar/lenght/ex4.html
+++ b/string_entregar/lenght/ex4.html
@@ -9,7 +9,7 @@ numero[0]; // 1
 numero[1]; // 5
 
 <script>
-function validarNumeroTelefone(numero) {
+function validar(numero) {
 
   numero = String(numero);
 
@@ -29,5 +29,5 @@ function validarNumeroTelefone(numero) {
   return "Número válido!";
 }
 
-console.log(validarNumeroTelefone(1599655555));
+console.log(validar(1599655555));
 </script>
