--- a/string_entregar/lenght/ex4.html
+++ b/string_entregar/lenght/ex4.html
@@ -9,25 +9,27 @@ numero[0]; // 1
 numero[1]; // 5
 
 <script>
-function validar(numero) {
+let numero = "1599655555"; 
 
-  numero = String(numero);
+function validarNumero(num) {
+    
+    let str = num.toString();
+   
+    let caracteres = str.split('');
 
-  if (!/^\d+$/.test(numero)) {
-    return "Número inválido: deve conter apenas dígitos.";
-  }
-  if (numero.length < 10 || numero.length > 11) {
-    return "Número inválido: deve conter 10 ou 11 dígitos.";
-  }
-  if (numero[0] === '0') {
-    return "Número inválido: DDD não pode começar com 0.";
-  }
-  if (numero.length === 11 && numero[2] !== '9') {
-    return "Número inválido: número de celular deve começar com '9'.";
-  }
+    for (let i = 0; i < caracteres.length; i++) {
+        let charCode = caracteres[i].charCodeAt(0);
+        if (charCode < 48 || charCode > 57) {
+            return "Número inválido! digite apenas números.";
+        }
+    }
+    if (caracteres.length < 10) {
+        return "Número inválido! quantidade insuficiente de dígitos.";
+    }
 
-  return "Número válido!";
+    return "Número válido.";
 }
 
-console.log(validar(1599655555));
+console.log(validarNumero(numero));
+
 </script>
